- Seperated main CSS file to SCSS files. - Wrapped extension around Div to implement nesting SCSS. - Renamed CSS identifiers in styles.css to resolve browser CSS clash.

--- a/frontend/extension/styles.css
+++ b/frontend/extension/styles.css
@@ -1,13 +1,16 @@
-html,
-body {
+#launchpad-essentially-html {
     background: none;
 }
 
-main {
+#launchpad-essentially-body {
+    background: none;
+}
+
+/* main {
     padding: 0;
     margin: 0;
     border-radius: 10px;
-}
+} */
 
 #essentially-extension-v1-lp {
     padding: 0;
