--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,109 +2,109 @@
 @import "components/Lens/lens.scss";
 @import "components/Sidebar/sidebar.scss";
 
-:root {
+#launchpad-essentially {
     --extension-tertiary: #191b43;
     --extension-secondary: #191b43;
     --extension-primary: #e9e9e9;
-}
 
-html {
-    font-family: 'Sora', sans-serif;
-}
+    html {
+        font-family: 'Sora', sans-serif;
+    }
 
-button {
-    color: white;
-}
+    button {
+        color: white;
+    }
 
-body {
-    background-color: transparent;
-    pointer-events: none;
-}
+    body {
+        background-color: transparent;
+        pointer-events: none;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-    pointer-events: all;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        pointer-events: all;
+    }
 
-h1 {
-    font-size: 0.8rem;
-    padding: 0;
-    margin: 0;
-}
+    h1 {
+        font-size: 0.8rem;
+        padding: 0;
+        margin: 0;
+    }
 
-h2 {
-    font-size: 0.7rem;
-    padding: 0;
-    margin: 0;
-}
+    h2 {
+        font-size: 0.7rem;
+        padding: 0;
+        margin: 0;
+    }
 
-h6 {
-    font-size: 0.4rem;
-    padding: 0;
-    margin: 0;
-}
+    h6 {
+        font-size: 0.4rem;
+        padding: 0;
+        margin: 0;
+    }
 
-.start {
-    padding: 5px 0px 15px;
-    width: 200px;
-}
+    .start {
+        padding: 5px 0px 15px;
+        width: 200px;
+    }
 
-.actions button {
-    padding: 8px 12px;
-    margin: 5px;
-    border-radius: 7px;
-    background-color: var(--extension-secondary);
-    outline: none;
-    font-size: 10px;
-    border: none;
-}
+    .actions button {
+        padding: 8px 12px;
+        margin: 5px;
+        border-radius: 7px;
+        background-color: var(--extension-secondary);
+        outline: none;
+        font-size: 10px;
+        border: none;
+    }
 
-.actions {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
+    .actions {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
 
-.popup {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 6px;
-    margin: 5px;
-    max-height: 90vh;
-}
+    .popup {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: flex-start;
+        padding: 6px;
+        margin: 5px;
+        max-height: 90vh;
+    }
 
-.settings {
-    margin: 4px 7px;
-}
+    .settings {
+        margin: 4px 7px;
+    }
 
-.dropdown {
-    display: flex;
-    flex-direction: column;
-}
+    .dropdown {
+        display: flex;
+        flex-direction: column;
+    }
 
-.dropdown button {
-    padding: 4px 10px;
-    margin: 0px;
-    border-radius: 3px;
-    background-color: var(--extension-primary);
-    outline: none;
-    font-size: 10px;
-    border: none;
-}
+    .dropdown button {
+        padding: 4px 10px;
+        margin: 0px;
+        border-radius: 3px;
+        background-color: var(--extension-primary);
+        outline: none;
+        font-size: 10px;
+        border: none;
+    }
 
-.dropdown>div {
-    margin: 5px 0px;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--extension-primary);
-    border-radius: 3px;
-}
+    .dropdown>div {
+        margin: 5px 0px;
+        display: flex;
+        flex-direction: column;
+        background-color: var(--extension-primary);
+        border-radius: 3px;
+    }
 
-.page {
-    display: flex;
-    flex-direction: row;
+    .page {
+        display: flex;
+        flex-direction: row;
+    }
 }
