--- a/frontend/src/components/ArticleSection/article.scss
+++ b/frontend/src/components/ArticleSection/article.scss
@@ -1,171 +1,173 @@
-nav {
-    margin: 0px 5px 10px;
-    padding: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+#launchpad-essentially {
+    nav {
+        margin: 0px 5px 10px;
+        padding: 5px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-nav button {
-    border-radius: 100%;
-    background: none;
-    outline: none;
-    border: none;
-}
+    nav button {
+        border-radius: 100%;
+        background: none;
+        outline: none;
+        border: none;
+    }
 
-.article {
-    overflow: hidden;
-    max-width: 450px;
-    border-radius: 6px;
-    margin: 10px;
-    font-size: 13px;
-    background-color: #ffffff;
-    line-height: 1.8;
-}
+    .article {
+        overflow: hidden;
+        max-width: 450px;
+        border-radius: 6px;
+        margin: 10px;
+        font-size: 13px;
+        background-color: #ffffff;
+        line-height: 1.8;
+    }
 
-.article .a {
-    padding: 5px 36px;
-    overflow-y: scroll;
-    width: fit-content;
-    min-width: 300px;
-    max-height: 45vh;
-}
+    .article .a {
+        padding: 5px 36px;
+        overflow-y: scroll;
+        width: fit-content;
+        min-width: 300px;
+        max-height: 45vh;
+    }
 
-.article p {
-    padding-top: 14px;
-}
+    .article p {
+        padding-top: 14px;
+    }
 
-.article .bottom-bar {
-    background-color: var(--extension-tertiary);
-    width: 100%;
-    height: 35px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
+    .article .bottom-bar {
+        background-color: var(--extension-tertiary);
+        width: 100%;
+        height: 35px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
 
-.article .top-bar {
-    padding: 10px;
-    height: 35px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+    .article .top-bar {
+        padding: 10px;
+        height: 35px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.article .top-bar div {
-    width: fit-content;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+    .article .top-bar div {
+        width: fit-content;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.article .top-bar h2 {
-    margin: 0px 10px;
-}
+    .article .top-bar h2 {
+        margin: 0px 10px;
+    }
 
-.article .top-bar button {
-    background: none;
-    outline: none;
-    border: none;
-}
+    .article .top-bar button {
+        background: none;
+        outline: none;
+        border: none;
+    }
 
-.article .bottom-bar>button {
-    background-color: var(--extension-secondary);
-    font-weight: 500;
-    width: 30px;
-    height: 30px;
-    font-size: 13px;
-    padding: 3px 3px;
-    margin: 2px;
-    border: none;
-    outline: none;
-    border-radius: 100%;
-    position: relative;
-}
+    .article .bottom-bar>button {
+        background-color: var(--extension-secondary);
+        font-weight: 500;
+        width: 30px;
+        height: 30px;
+        font-size: 13px;
+        padding: 3px 3px;
+        margin: 2px;
+        border: none;
+        outline: none;
+        border-radius: 100%;
+        position: relative;
+    }
 
-.article .bottom-bar>button * {
-    width: 100%;
-    height: 100%;
-    background-color: transparent !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+    .article .bottom-bar>button * {
+        width: 100%;
+        height: 100%;
+        background-color: transparent !important;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 
-.article ::-moz-selection {
-    /* Code for Firefox */
-    color: var(--extension-primary);
-    background: var(--extension-secondary);
-}
+    .article ::-moz-selection {
+        /* Code for Firefox */
+        color: var(--extension-primary);
+        background: var(--extension-secondary);
+    }
 
-.article ::selection {
-    color: var(--extension-primary);
-    background: var(--extension-secondary);
-}
+    .article ::selection {
+        color: var(--extension-primary);
+        background: var(--extension-secondary);
+    }
 
-.article-body {
-    padding: 4px 5px 5px 20px;
-}
+    .article-body {
+        padding: 4px 5px 5px 20px;
+    }
 
-.article-body h1 {
-    font-size: 20px;
-    font-weight: bold;
-}
+    .article-body h1 {
+        font-size: 20px;
+        font-weight: bold;
+    }
 
-.article-body h6 {
-    font-size: 11px;
-    font-style: italic;
-    font-weight: 300;
-    padding: 3px 0px;
-}
+    .article-body h6 {
+        font-size: 11px;
+        font-style: italic;
+        font-weight: 300;
+        padding: 3px 0px;
+    }
 
-.article-body nav {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    padding: 0;
-    margin: 0;
-}
+    .article-body nav {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        padding: 0;
+        margin: 0;
+    }
 
-.article-body nav button {
-    background: none;
-    width: 25px;
-    height: 25px;
-    margin: 0;
-}
+    .article-body nav button {
+        background: none;
+        width: 25px;
+        height: 25px;
+        margin: 0;
+    }
 
-.keywords {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 10px 0px;
-}
+    .keywords {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        padding: 10px 0px;
+    }
 
-.keywords p {
-    background-color: var(--extension-tertiary);
-    font-weight: 500;
-    font-size: 13px;
-    padding: 5px 15px;
-    margin: 0px 10px 0px 0px;
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    color: var(--extension-primary);
-}
+    .keywords p {
+        background-color: var(--extension-tertiary);
+        font-weight: 500;
+        font-size: 13px;
+        padding: 5px 15px;
+        margin: 0px 10px 0px 0px;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        color: var(--extension-primary);
+    }
 
-.popup .main {
-    min-width: fit-content;
-    width: 130px;
-    position: sticky;
-    top: 0;
-    right: 0;
-    border-radius: 6px;
-    background-color: var(--extension-primary);
-    box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.25);
-    max-height: inherit;
-    overflow: scroll;
+    .popup .main {
+        min-width: fit-content;
+        width: 130px;
+        position: sticky;
+        top: 0;
+        right: 0;
+        border-radius: 6px;
+        background-color: var(--extension-primary);
+        box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.25);
+        max-height: inherit;
+        overflow: scroll;
+    }
 }
