--- a/frontend/src/components/Sidebar/sidebar.scss
+++ b/frontend/src/components/Sidebar/sidebar.scss
@@ -1,9 +1,11 @@
-.sidebar {
-    width: 50px;
-    background-color: var(--extension-secondary);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0px;
+#launchpad-essentially {
+    .sidebar {
+        width: 50px;
+        background-color: var(--extension-secondary);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 0px;
+    }
 }
